2008-04-11  Zoltan Varga  <vargaz@gmail.com>

	* mini.c (mini_method_compile): Set cfg->opt by disabling SSAPRE instead of
	enabling everything.

	* mini-ppc.c (NEW_INS): Use mono_bblock_insert_after_ins ().

Fri Apr 11 18:44:31 CEST 2008 Paolo Molaro <lupus@ximian.com>

	* cpu-ppc.md, mini-ppc.c, mini-ppc.h, mini.h, decompose.c: first cut
	of powerpc port.

2008-04-11  Zoltan Varga  <vargaz@gmail.com>

	* mini-arm.c (NEW_INS): Fix this after the ins_list changes.

	* method-to-ir.c: Remove a FIXME, we are now faster on scimark as well.

	* mini-amd64.h (MONO_ARCH_EMIT_BOUNDS_CHECK): Add MONO_ARCH_EMIT_BOUNDS_CHECK
	definition which somehow got missing.

2008-04-07  Zoltan Varga  <vargaz@gmail.com>

	* method-to-ir.c (MONO_ARCH_EMIT_BOUNDS_CHECK): Move the arch-specific definitions
	to mini-amd64.h/mini-x86.h.

	* method-to-ir.c: Move the branch+bblock macros to ir-emit.h as well.

	* method-to-ir.c: Split up this now giant file a bit: Move the instruction 
	emission macros to ir-emit.h, and the various decompose functions to 
	decompose.c.

2008-04-05  Zoltan Varga  <vargaz@gmail.com>

	* local-propagation.c: Move the if-conversion pass to branch-opts.c where it belongs.

	* mini.c: Enable MONO_OPT_SSA if abcrem or ssapre is enabled, so code only needs to
	check whenever SSA is enabled.

2008-04-02  Zoltan Varga  <vargaz@gmail.com>

	* local-propagation.c (mono_branch_to_cmov): Rename this to mono_if_conversion ().

	* mini.h mini.c method-to-ir.c: Rename cfg->disable_extended_bblocks to 
	cfg->enable_extended_bblocks. Add some comments as to why it is currently 
	disabled.

2008-04-01  Zoltan Varga  <vargaz@gmail.com>

	* method-to-ir.c (mono_handle_global_vregs): Make the component vregs of a long
	vreg volatile if the IR also uses the original vreg.

	* mini.c (mono_compile_create_var_for_vreg): Only make the component vregs of
	a long vreg volatile if it is needed by optimizations.

	* mini-x86.c (mono_arch_emit_inst_for_method): Add support for Min/Max.
